--- a/JenkinsTestMvc.csproj
+++ b/JenkinsTestMvc.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Jenkinsfile" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Jenkinsfile" />
+  </ItemGroup>
+
 </Project>
